--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "@types/node": "^12.20.24",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.18",
+    "bootstrap": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.10.0",
+    "redux-thunk": "^2.3.0",
+    "redux-typescript": "^1.2.1",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
   },
@@ -39,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.39.0"
   }
 }
