--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@types/react-redux": "^7.1.18",
     "bootstrap": "^5.1.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "reactstrap": "^8.10.0",
     "redux-thunk": "^2.3.0",
     "redux-typescript": "^1.2.1",
     "typescript": "^4.4.2",
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.8",
     "sass": "^1.39.0"
   }
 }
